# paypayopa-sdk-rust

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs
src/constants/: api_list.rs  error_code.rs  http_status_code.rs  mod.rs  url.rs
src/resources/: account.rs  cashback.rs  code.rs  mod.rs  payment.rs  pending.rs  preauth.rs  user.rs
tests/: client.rs
