[package]
name = "paypayopa-sdk-rust"
version = "0.1.0"
edition = "2021"
authors = ["Tsubaki"]
description = "Rust port of the PayPay OPA SDK"
license = "Apache-2.0"
repository = "https://github.com/paypay/paypayopa-sdk-python"
keywords = ["paypay", "payment", "gateway", "japan"]

[lib]
name = "paypayopa"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
hmac = "0.12"
jsonwebtoken = "9"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
